# open-course

./: .env  .gitignore  Dockerfile  README.md  ole.log(postsToRender)  open-course-server.pem:Zone.Identifier  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
application/: __init__.py  config.py  model.py
application/api/: __init__.py  courses.py  posts.py  profile.py  study_group.py  user.py
application/api/v1/: __init__.py  courses.py  posts.py
application/js/: app.jsx  filterPopUp.jsx  groupfeed.jsx  index.jsx  main.jsx  popUp.jsx  post.jsx  post1.jsx  post2.jsx  resource.jsx  resourcefeed.jsx  studygroupfeed.jsx
application/js/mainPage/: feed.jsx  popUp.jsx  post.jsx  postForm.jsx
application/static/css/: about.css  courses.css  details.css  feed.css  filterpopup.css  footer.css  input.css  login.css  navbar.css  popup.css  post.css  profile.css  resource.css  saved.css  style.css
application/static/js/: responsive_navbar.js
application/templates/: about.html  base.html  class.html  course.html  courses.html  create.html  details.html  events.html  group-details.html  index.html  join.html  login.html  navbar.html  otherUsers.html  posts.html  privacy-policy.html  profile.html  saved.html  temporary.html  viewUsers.html
application/views/: __init__.py  about.py  course.py  courses.py  create.py  events.py  index.py  join.py  login.py  post.py  posts.py  profile.py  saved.py  viewUsers.py  view_user_profile.py
psql/: schema.psql  schema.sql
