[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-course"
version = "1.0.0"
# Update dependencies as needed
dependencies = [
    "Flask",
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["application"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]
